--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 89px;
 }
 
 .header__phone-number {
@@ -26,13 +27,14 @@
     display: flex;
     flex-direction: column;
     gap: 33px;
-    width: 581px;
+
 }
 
 .offer__title {
     font-size: 40px;
     font-weight: 700;
     line-height: 1.35em;
+    /* width: 530px; */
 }
 
 .offer__text {
