--- a/css/header.css
+++ b/css/header.css
@@ -27,14 +27,13 @@
     display: flex;
     flex-direction: column;
     gap: 33px;
-
+    width: 530px;
 }
 
 .offer__title {
     font-size: 40px;
     font-weight: 700;
     line-height: 1.35em;
-    /* width: 530px; */
 }
 
 .offer__text {
