--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,8 @@ img {
 }
 
 a {
+    margin: 0;
+    padding: 0;
     text-decoration: none;
     color: color: #161420;
     cursor: pointer;
@@ -73,6 +75,10 @@ a {
     background: linear-gradient(181deg, #E0F605 0.97%, #000 146.41%);
     color: #000;
     width: 224px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.53em;
 }
 
 .button:hover {
