--- a/css/trusted.css
+++ b/css/trusted.css
@@ -18,32 +18,7 @@
     justify-content: space-between;
 }
 
-.trusted__icon1 {
-    width: 82px;
-    height: 80px;
-}
-
-.trusted__icon2 {
-    width: 171.6px;
-    height: 80px;
-}
-
-.trusted__icon3 {
-    width: 82px;
-    height: 80px;
-}
-
-.trusted__icon4 {
-    width: 160px;
-    height: 80px;
-}
-
-.trusted__icon5 {
-    width: 160px;
-    height: 80px;
-}
-
-.trusted__icon6 {
+.trusted__icon {
     width: auto;
     height: 80px;
 }
